      target \command{make compact-pdf} (at the top level or in
      directory \file{doc/manual}).

      \item There is now support for LLVM clang 15 on Linux, which
      defaults to position-independent (PIE) executables whereas
      \command{gfortran} does not.  See the \dQuote{R Installation and
      Administration} manual for the setting required.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{qt(*, log.p=TRUE)} in outer tails no longer produces
      \code{NaN} in its final steps, thus fixing \PR{18360}.

      \item \code{tools::Rd2latex()} now escapes hashes and ampersands
      when writing URLs, fixing LaTeX errors with such URLs in \verb{\tabular}.

      \item When \code{isGeneric(f, fdef=*)} is used with mismatching
      names, the warning is better understandable; reported (with fix) in
      \PR{18370} by Gabe Becker.

      \item \code{poly(x, n)} now works again (and is now documented)
      when \code{x} is a \code{"Date"} or \code{"POSIXct"} object, or of
      another class while fulfilling \code{mode(x) == "numeric"}.  This
      also enables \code{poly(x, *, raw=TRUE)} for such variables.
      Reported by Michael Chirico to R-devel.

      \item \code{write.table()}, \code{write.csv()} and
      \code{write.csv2()} restore their numerical precision (internal
      equivalent of \code{digits = 15}) after an interrupt (\PR{18384}).

      \item One can now read also byte \code{FF} from a clipboard connection
      (\PR{18385}).

      \item \code{source("")} and \code{source(character())} now give more
      helpful error messages.

      \item \command{R CMD check --as-cran} set \env{_R_CHECK_TIMINGS_}
      too late to have the intended effect.

      \item \code{as.POSIXlt(x)} now also works with very large dates
      \code{x}, fixing \PR{18401} reported by Hannes Mühleisen.

      \item Files can now be extracted even from very large zip archives
      (\PR{18390}, thanks to Martin Jakt).
